# cpp_server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.bat  setup.sh
output/: .env
output/static/: index.html
src/: server.cpp
